--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,23 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.charts-container {
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  background-color: #282c34;
+  padding: 100px;
+  margin: 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line-chart-container {
+  background-color: #353a44;
+  margin: 20px 20px 20px 20px;
+  padding: 2%;
+  border-radius: 4%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 25px 15px 20px 0 rgba(0, 0, 0, 0.59);
+}
+
+.test-chart {
+  
 }
