--- a/src/App.css
+++ b/src/App.css
@@ -25,14 +25,13 @@
 }
 
 .charts-container {
-  display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   height: 100%;
   background-color: #282c34;
   padding: 10px;
   margin: 7%;
+  border-radius: 2%;
 }
 
 .line-chart-container {
