--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   height: 100%;
   background-color: #282c34;
   padding: 10px;
-  margin: 7%;
+  margin: 4% 7% 7% 7%;
   border-radius: 2%;
 }
 
@@ -40,6 +40,7 @@
   padding: 2%;
   border-radius: 4%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 25px 15px 20px 0 rgba(0, 0, 0, 0.59);
+  min-height: auto;
 }
 
 .LOB-ratio-container {
@@ -50,19 +51,28 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 25px 15px 20px 0 rgba(0, 0, 0, 0.59);
 }
 
-.gda-logo {
-  height: 7%;
-  width: 7%;
+.logo {
+  font-size: 40px!important;
+  font-weight: 700!important;
+  line-height: 120%!important;
+  margin-left: 1%!important;
 }
 
 .navbar {
-  background: linear-gradient(to right, #06284e, #000000);
-  border-bottom: 3px solid #ffffff!important;
+  background: rgba(14,16,19,255)!important;
+  /* border-bottom: 3px solid #ffffff!important; */
 }
 
 .title {
   color: #ffffff;
-  margin-left: 2%!important;
+  margin-left: 3%!important;
   font-size: 2em!important;
   font-weight: bold!important;
+}
+
+.select-container {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
 }
