--- a/src/App.css
+++ b/src/App.css
@@ -67,14 +67,17 @@
   font-weight: bold!important;
 }
 
-.select-container {
-  /* margin-top: auto;
-  margin-bottom: auto; */
+.select-grid-container {
   line-height: 2.6;
   margin-right: 2%!important;
   background-color: #353a44;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 15px 7px 10px 0 rgba(0, 0, 0, 0.59);
   padding: 1%!important;
+}
+
+.select-container {
+  vertical-align: center;
+  margin-top: 30%;
 }
 
 .market-order-container {
